feat: updating experience content

--- a/experience/index.html
+++ b/experience/index.html
@@ -9,10 +9,10 @@
   <body>
     <a-scene>
       <a-assets>
-        <audio crossorigin="anonymous" id="audio" src="assets/wind.wav"></audio>
+        <audio crossorigin="anonymous" id="audio" src="assets/birds.mp3"></audio>
       </a-assets>
       <a-sound src="#audio" allow="autoplay" autoplay="true" loop="true"></a-sound>
-      <a-sky id="skybox" src="assets/night.jpg"> </a-sky>
+      <a-sky id="skybox" src="assets/lacatalina.jpg"> </a-sky>
     </a-scene>
   </body>
 </html>
