feat: sound fixed

--- a/experience/index.html
+++ b/experience/index.html
@@ -8,6 +8,14 @@
     <script src="https://unpkg.com/aframe-animation-component@^4.1.2/dist/aframe-animation-component.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.5.1/dist/aframe-look-at-component.min.js"></script>
     <script>
+      AFRAME.registerComponent('starthandler', {
+        init:function() {
+          let audio = document.querySelector("#audio");
+          this.el.addEventListener('click', () => {
+                    audio.play();
+          });
+        }
+      })
       AFRAME.registerComponent('hotspots',{
         init:function(){
             this.el.addEventListener('reloadspots',function(evt){
@@ -53,19 +61,25 @@
   <body>
     <a-scene>
       <a-assets>
-        <audio crossorigin="anonymous" id="audio" src="assets/birds.mp3"></audio>
+        <audio crossorigin="anonymous" id="audio" src="assets/birds.mp3" loop="true"></audio>
         <img id="hotspot" src="assets/immerso/immerso-btn.png"></img>
-        <img id="point1" src="assets/lacatalina.jpg"></img>
-        <img id="point2" src="assets/rancho.jpg"></img>
+        <img id="point1" src="assets/bg360.png"></img>
+        <img id="point2" src="assets/lacatalina.jpg"></img>
+        <img id="point3" src="assets/rancho.jpg"></img>
       </a-assets>
+
       <a-entity id="spots" hotspots>
         <a-entity id="group-point1">
-          <a-image spot="linkto:#point2;spotgroup:group-point2" position="5 1.6 2.5"></a-image>
+          <a-image spot="linkto:#point2;spotgroup:group-point2" position="0 1.6 -2" starthandler></a-image>
         </a-entity>
         <a-entity id="group-point2" scale="0 0 0">
-          <a-image spot="linkto:#point1;spotgroup:group-point1" position="-5 1.6 1"></a-image>
+          <a-image spot="linkto:#point3;spotgroup:group-point3" position="5 1.6 2.5"></a-image>
+        </a-entity>
+        <a-entity id="group-point3" scale="0 0 0">
+          <a-image spot="linkto:#point2;spotgroup:group-point2" position="-5 1.6 1"></a-image>
         </a-entity>
       </a-entity>
+
       <a-entity id="cam" camera position="0 1.6 0" look-controls>
         <a-entity cursor="fuse:true;fuseTimeout:2000"
                   geometry="primitive:ring;radiusInner:0.01;radiusOuter:0.02"
@@ -74,7 +88,8 @@
                   animation__mouseenter="property:scale;to:3 3 3;startEvents:mouseenter;endEvents:mouseleave;dir:reverse;dur:2000;loop:1">
         </a-entity>
       </a-entity>
-      <a-sound src="#audio" allow="autoplay" autoplay="true" loop="true"></a-sound>
+
+      <!-- <a-sound src="#audio" allow="autoplay" autoplay="true" loop="true"></a-sound> -->
       <a-sky id="skybox" src="#point1"> </a-sky>
     </a-scene>
   </body>
