--- a/experience/index.html
+++ b/experience/index.html
@@ -11,8 +11,16 @@
       AFRAME.registerComponent('starthandler', {
         init:function() {
           let audio = document.querySelector("#audio");
+          let welcomevideo = document.querySelector("#welcomevideo");
+          let skybox = document.querySelector("#skybox");
+
           this.el.addEventListener('click', () => {
                     audio.play();
+                    // welcomevideo.pause();
+                    welcomevideo.components.material.material.map.image.pause();
+                    welcomevideo.remove();
+                    skybox.setAttribute("scale","-1 1 1");
+
           });
         }
       })
@@ -66,11 +74,12 @@
         <img id="point1" src="assets/bg360.png"></img>
         <img id="point2" src="assets/lacatalina.jpg"></img>
         <img id="point3" src="assets/rancho.jpg"></img>
+        <video id="welcome" src="assets/welcome.mp4" autoplay loop></video>
       </a-assets>
 
       <a-entity id="spots" hotspots>
         <a-entity id="group-point1">
-          <a-image spot="linkto:#point2;spotgroup:group-point2" position="0 1.6 -2" starthandler></a-image>
+          <a-image spot="linkto:#point2;spotgroup:group-point2" position="0 2.1 -2" starthandler></a-image>
         </a-entity>
         <a-entity id="group-point2" scale="0 0 0">
           <a-image spot="linkto:#point3;spotgroup:group-point3" position="5 1.6 2.5"></a-image>
@@ -89,8 +98,9 @@
         </a-entity>
       </a-entity>
 
-      <!-- <a-sound src="#audio" allow="autoplay" autoplay="true" loop="true"></a-sound> -->
-      <a-sky id="skybox" src="#point1"> </a-sky>
+      <a-sky id="skybox" src="#point1" scale="0 0 0"></a-sky>
+      <a-videosphere id="welcomevideo" src="#welcome" rotation="0 90 0"></a-videosphere>
+
     </a-scene>
   </body>
 </html>
